--- a/template/_layout.tmpl
+++ b/template/_layout.tmpl
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="robots" content="noindex, nofollow">
   <meta charset="UTF-8">
   <title>{{.Page.Title}}</title>
   <meta name="description" content="{{.Page.Description}}" />
