--- a/template/_layout.tmpl
+++ b/template/_layout.tmpl
@@ -3,6 +3,7 @@
 <html>
 <head>
   <meta name="robots" content="noindex, nofollow">
+  <meta name="referrer" content="no-referrer">
   <meta charset="UTF-8">
   <title>{{.Page.Title}}</title>
   <meta name="description" content="{{.Page.Description}}" />
