--- a/template/_layout.tmpl
+++ b/template/_layout.tmpl
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta name="robots" content="noindex, nofollow">
-  <meta name="referrer" content="no-referrer">
+  <meta name="referrer" content="same-origin">
   <meta charset="UTF-8">
   <title>{{.Page.Title}}</title>
   <meta name="description" content="{{.Page.Description}}" />
